Fix header z-index

--- a/frontend/less/base.less
+++ b/frontend/less/base.less
@@ -7,6 +7,8 @@
 @button-height: 24px;
 @button-hpadding: 10px;
 @nav-height: 50px;
+
+@z-header: 100;
 @z-overlay: 1000;
 @z-modal: 2000;
 
@@ -54,6 +56,7 @@ body, input, textarea, select, optgroup, option, button {
     top: 0;
     left: 0;
     right: 0;
+    z-index: @z-header;
 
     .header-inner {
         position: relative; // this is needed by .menu-user
